force-app/main/default/objects/Event__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Meetup</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Panel Discussion</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Lecture</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>Retreat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>