force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>