force-app/main/default/objects/Event__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <type>Time</type>
</CustomField>