force-app/main/default/objects/Event__c/fields/Preferred_Categories__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Categories__c</fullName>
    <label>Preferred Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Parenting</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Child Development</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Early Childhood Education</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Physical Fitness</fullName>
            </value>
            <value>
                <fullName>Financial Education</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Safety Awareness</fullName>
            </value>
            <value>
                <fullName>Emotional Well-being</fullName>
            </value>
            <value>
                <fullName>Work-Life Balance</fullName>
            </value>
            <value>
                <fullName>Legal Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>