force-app/main/default/objects/Event__c/fields/Related_Resources__c.field-meta.xml
<CustomField>
    <fullName>Related_Resources__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Resources</label>
    <referenceTo>Parenting_Resource__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>