force-app/main/default/objects/Event__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parenting</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Child Development</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Early Childhood</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Legal Support</fullName>
            </value>
            <value>
                <fullName>Career Development</fullName>
            </value>
            <value>
                <fullName>Emotional Well-being</fullName>
            </value>
            <value>
                <fullName>Stress Management</fullName>
            </value>
            <value>
                <fullName>Work-Life Balance</fullName>
            </value>
            <value>
                <fullName>Technology and Parenting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>